add LLAMA-API and DEEPSEEK-API

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,8 @@
               >
                 <option value="llama" selected>Llama</option>
                 <option value="deepseek">DeepSeek</option>
+                <option value="llama_api">LLAMA-API</option>
+                <option value="deepseek_api">DeepSeek-API</option>
               </select>
             </div>
             <div class="flex-grow ml-2">
